Update and rename sange.html to index.html

--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@ textarea {
         <i class="fa fa-instagram"></i>
       </a>
     </div>
-    <div class="footer-sect mt-20 width-50"> © 2024 sangeetha.com </div>
+    <div class="footer-sect mt-20 width-50"> Â© 2024 sangeetha.com </div>
   </div>
 </div>
 <style>
